--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   - if [ "$TRAVIS_BRANCH" = "master" ]; then ng build --prod; fi
   - if [ "$TRAVIS_BRANCH" = "development" ]; then ng build --configuration=test --aot=true; fi
 after_success:
-  - if [ "$TRAVIS_BRANCH" = "master" ]; then firebase use production; fi
+  #- if [ "$TRAVIS_BRANCH" = "master" ]; then firebase use production; fi
   #- if [ "$TRAVIS_BRANCH" = "master" ]; then firebase deploy --token $FIREBASE_TOKEN --non-interactive; fi
-  - if [ "$TRAVIS_BRANCH" = "development" ]; then firebase use development; fi
+  #- if [ "$TRAVIS_BRANCH" = "development" ]; then firebase use development; fi
   #- if [ "$TRAVIS_BRANCH" = "development" ]; then firebase deploy --token $FIREBASE_TOKEN --non-interactive; fi
