--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/pwa": "^0.12.2",
     "@angular/router": "~7.2.0",
     "@angular/service-worker": "~7.2.0",
+    "angularfire2": "^5.1.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.8.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
