--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ branches:
   - development
 before_script:
   - npm install
+  . npm install firebase-tools
 script:
   - if [ "$TRAVIS_BRANCH" = "master" ]; then ng build --prod; fi
   - if [ "$TRAVIS_BRANCH" = "development" ]; then ng build --environment=test; fi
